[package]
name = "fast-find"
version = "0.1.0"
authors = ["Ben Aubin <ben@benaubin.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/benaubin/fast-find"
description = "Find fast finds bytes fast"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
